--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "scripts": {
     "test": "jest",
-    "test-count-lines": "lambda-local -l handler.js -h countLines -e events/countLines.json"
+    "test-count-lines": "serverless invoke local -f countLines -p events/countLines.json"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
   },
   "homepage": "https://gitlab.com/mdas-lasalle/fileparser#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.24.0",
     "http-status-codes": "^1.4.0",
     "jest": "^24.9.0",
     "lambda-local": "^1.6.3",
