--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,9 @@
 service: fileparser
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   region: eu-west-1
+  lambdaHashingVersion: 20201221
 functions:
   hello:
     handler: handler.hello
@@ -11,7 +12,7 @@ functions:
     events:
       - http:
           path: countlines/{url}
-          method: post
+          method: get
           request:
             parameters:
               paths:
