--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,12 @@
 service: fileparser
+
+frameworkVersion: '3'
+
 provider:
   name: aws
   runtime: nodejs14.x
   region: eu-west-1
-  lambdaHashingVersion: 20201221
+
 functions:
   hello:
     handler: handler.hello
