--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "handler.js",
   "scripts": {
     "test": "jest",
-    "test-count-lines": "serverless invoke local -f countLines -p events/countLines.json"
+    "test-count-lines": "serverless invoke local -f countLines -p events/countLines.json",
+    "test-count-lines-remote": "serverless invoke -f countLines -p events/countLines.json",
+    "test-count-words": "serverless invoke local -f countWordsS3 -p events/countWordsS3.json"
   },
   "repository": {
     "type": "git",
@@ -22,11 +24,15 @@
   },
   "homepage": "https://gitlab.com/mdas-lasalle/fileparser#readme",
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "http-status-codes": "^1.4.0",
     "jest": "^29.3.1",
     "lambda-local": "^2.0.3",
     "path": "^0.12.7",
     "query-string": "^6.9.0"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-s3": "^3.445.0",
+    "serverless": "^3.36.0"
   }
 }
