--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "serverless fileparser",
   "main": "handler.js",
   "scripts": {
-    "test": "jest",
+    "test": "export IS_LOCAL=true && jest",
     "test-count-lines": "serverless invoke local -f countLines -p events/countLines.json",
     "test-count-lines-remote": "serverless invoke -f countLines -p events/countLines.json",
-    "test-count-words": "serverless invoke local -f countWordsS3 -p events/countWordsS3.json"
+    "test-count-words": "serverless invoke local -f countWordsS3 -p events/countWordsS3.json",
+    "test-lambda-local": "export IS_LOCAL=true && npx lambda-local -l handler.js -h countLinesFromS3 -e event.json",
+    "re-deploy": "rm -rf .serverless .webpack node_modules package-lock.json && npm install && serverless deploy --force",
+    "check-aws-working": "aws s3 cp ./test-file.txt s3://santi-torrabadella-fabulous-read-bucket-dev/ && aws s3 ls s3://santi-torrabadella-fabulous-write-bucket-dev/ && aws s3 cp s3://santi-torrabadella-fabulous-write-bucket-dev/test-file.txt.result.txt ./result.txt && cat ./result.txt",
+    "see-file-aws": "aws s3 cp s3://santi-torrabadella-fabulous-read-bucket-dev/test-file.txt - | cat"
   },
   "repository": {
     "type": "git",
@@ -24,15 +28,17 @@
   },
   "homepage": "https://gitlab.com/mdas-lasalle/fileparser#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.709.0",
     "axios": "^0.27.2",
     "http-status-codes": "^1.4.0",
     "jest": "^29.3.1",
-    "lambda-local": "^2.0.3",
     "path": "^0.12.7",
-    "query-string": "^6.9.0"
+    "query-string": "^6.14.1"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.445.0",
-    "serverless": "^3.36.0"
+    "aws-sdk-client-mock": "^4.1.0",
+    "lambda-local": "^2.2.0",
+    "serverless": "^3.36.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
