--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,9 @@ test:
 
 .deploy:
   script:
-    - serverless config credentials --provider aws --key ${KEY} --secret ${SECRET}
+    - serverless config credentials --provider aws --key ${ACCESS_KEY_ID} --secret ${SECRET_ACCESS_KEY}
     - serverless deploy --stage=${STAGE} --verbose
+
 
 deploy-master:
   stage: deploy
